more controllers and models eddittted

--- a/MovieWebSite/MovieWebSite/Views/Home/Index.cshtml
+++ b/MovieWebSite/MovieWebSite/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>Hello World</h1>
-    <p class="lead">TTESSSTTT</p>
+    <p class="lead">Welcome to the Movie Review website where you can review all your favourite movies, actors and directors and leave helpful comments for other users</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
