--- a/MovieWebSite/MovieWebSite/Views/ActorModels/Details.cshtml
+++ b/MovieWebSite/MovieWebSite/Views/ActorModels/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MovieWebSite.Models.ActorModel
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
