--- a/MovieWebSite/MovieWebSite/Views/DirectorModels/Create.cshtml
+++ b/MovieWebSite/MovieWebSite/Views/DirectorModels/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MovieWebSite.Models.DirectorModel
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
