--- a/MovieWebSite/MovieWebSite/Views/DirectorModels/Delete.cshtml
+++ b/MovieWebSite/MovieWebSite/Views/DirectorModels/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MovieWebSite.Models.DirectorModel
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -20,32 +20,33 @@
             <dt>
                 @Html.DisplayNameFor(model => model.DirectorName)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.DirectorName)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.DirectorBio)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.DirectorBio)
             </dd>
-    
+
             <dt>
                 @Html.DisplayNameFor(model => model.DirectorDOB)
             </dt>
-    
+
             <dd>
                 @Html.DisplayFor(model => model.DirectorDOB)
             </dd>
-    
+
         </dl>
-    
-        @using (Html.BeginForm()) {
+
+        @using (Html.BeginForm())
+        {
             @Html.AntiForgeryToken()
-    
+
             <div class="form-actions no-color">
                 <input type="submit" value="Delete" class="btn btn-default" /> |
                 @Html.ActionLink("Back to List", "Index")
