--- a/MovieWebSite/MovieWebSite/Views/DirectorModels/Index.cshtml
+++ b/MovieWebSite/MovieWebSite/Views/DirectorModels/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MovieWebSite.Models.DirectorModel>
 
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
